# dipakniroula.com.np

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile copy  Dockerfile_dev  README.md  compose.yml  diesel.toml  docker-compose.prod.yml  docker-compose.yml  insert_admin.py  profile.json  pull_and_restart.sh  run.sh
.postgres_data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
.postgres_data/base/16384/: 2619
.postgres_data/base/5/: 2619  pg_internal.init
.postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
.postgres_data/pg_stat/: pgstat.stat
migrations/2024-07-30-132050_create_blogs/: down.sql  up.sql
migrations/2024-07-31-021215_create_experience/: down.sql  up.sql
migrations/2024-07-31-022050_create_social_links/: down.sql  up.sql
migrations/2024-08-16-025416_add_image_to_blogs/: down.sql  up.sql
migrations/2024-08-19-151048_contact_messages/: up.sql
migrations/2024-08-21-162423_admin_user/: up.sql
migrations/2024-08-26-145736_update_blog_fields/: down.sql  up.sql
migrations/2024-09-03-025801_update_resume_experience/: up.sql
migrations/2024-09-04-161125_add_order_in_experiences_table/: down.sql  up.sql
migrations/2024-09-17-021937_blog_categories/: down.sql  up.sql
migrations/2024-11-23-140649_create_sessions/: up.sql
monitoring/: docker-compose.yml  otel-collector-config.yml  prometheus.yml
src/: db.rs  embedded_migrations.rs  filter.rs  filters.rs  main.rs  middlewares.rs  models.rs  route_handlers.rs  schema.rs  session_backend.rs  state.rs
src/api/: auth.rs  mod.rs
src/api/v1/: blogs.rs  experiences.rs  messages.rs  mod.rs
src/auth/: mod.rs  models.rs  route_handlers.rs
src/blog/: blog_repository.rs  mod.rs  models.rs  route_handlers.rs
src/experiments/: json_parser.rs
src/message/: message_repository.rs  models.rs  route_handlers.rs
src/resume/: experiences.json  mod.rs  models.rs  resume_repository.rs  route_handlers.rs
src/utils/: error.rs  import_experiences.rs
static/: admin.css  resume.css  robots.txt  style.css
templates/: 404.html  add_social_link.html  admin_home.html  adminbase.html  base.html  blog_list.html  blogcreate.html  blogdetail.html  contact.html  home.html  login.html  resume.html
templates/admin/: add_social_link.html  admin_home.html  adminbase.html  adminbloglist.html  admincategorycreate.html  admincategorylist.html  admincategoryupdate.html  adminsocialmedialist.html  blogcreate.html  blogdelete.html  blogupdate.html  createexperience.html  experiencelist.html  update_social_link.html  updateexperience.html
utils/: import_experiences.py
