[package]
name = "dipak_site"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1" , features = ["multipart"]}
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

tower-http = { version = "0.6.2", features = ["fs", "cors"] }
axum_csrf = "0.11.0"

chrono = { version = "0.4.39", features = ["serde"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = {version = "0.2.3"}

# observability
tracing-opentelemetry = "0.29.0"
opentelemetry_sdk = { version = "0.28.0", features = ["trace"] }
opentelemetry = { version = "0.28.0", features = ["metrics"] }
opentelemetry-prometheus = "0.28.0"
prometheus = "0.13.4"


diesel = { version = "2.2.7", default-features = false, features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
regex = "1.11.1"

argon2 = "0.6.0-pre.1"
uuid = { version = "1.14.0", features = ["v4"] }
cookie = "0.18.1"
# [build-dependencies]
# diesel_cli = { version = "2.0", default-features = false, features = ["sqlite"] }


[profile.dev.package.askama_derive]
opt-level = 3


[profile.release]
opt-level = 3  # Max optimizations for performance
lto = true       # Enable Link Time Optimization
debug = false    # No debug symbols
panic = "abort"  # Abort on panic to reduce size
codegen-units = 1  # Improve cross-crate optimizations
strip = "debuginfo"  # Strip debug symbols
incremental = false  # Disable incremental compilation
target-cpu = "native"  # Optimize for the current machine's CPU