[package]
name = "dipak_site"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4" , features = ["multipart"]}
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

tower-http = { version = "0.6.6", features = ["fs", "cors"] }
axum_csrf = "0.11.0"

chrono = { version = "0.4.42", features = ["serde"] }

# tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = {version = "0.2.3"}

# observability removed

diesel = { version = "2.3.2", default-features = false, features = ["postgres", "chrono"] }
diesel_migrations = { version = "2.3.0", features = ["postgres"] }
diesel-async = { version = "0.8.0", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
regex = "1.11.2"

argon2 = "0.6.0-pre.1"
uuid = { version = "1.14.0", features = ["v4"] }
cookie = "0.18.1"
lazy_static = "1.5.0"
rand = "0.9.2"
# [build-dependencies]
# diesel_cli = { version = "2.0", default-features = false, features = ["sqlite"] }


[profile.dev.package.askama_derive]
opt-level = 3


[profile.release]
opt-level = 3  # Max optimizations for performance
lto = true       # Enable Link Time Optimization
debug = false    # No debug symbols
panic = "abort"  # Abort on panic to reduce size
codegen-units = 1  # Improve cross-crate optimizations
strip = "debuginfo"  # Strip debug symbols
incremental = false  # Disable incremental compilation
target-cpu = "native"  # Optimize for the current machine's CPU