[package]
name = "dipak_site"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.6"
axum = { version = "0.8.8" , features = ["multipart"]}
tokio = { version = "1.50.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

tower-http = { version = "0.6.8", features = ["fs", "cors"] }
axum_csrf = "0.11.0"

chrono = { version = "0.4.44", features = ["serde"] }

# tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = {version = "0.2.4"}

# observability removed

diesel = { version = "2.3.7", default-features = false, features = ["postgres", "chrono"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
diesel-async = { version = "0.8.0", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
regex = "1.12.3"

argon2 = "0.5.3"
uuid = { version = "1.23.0", features = ["v4"] }
cookie = "0.18.1"
lazy_static = "1.5.0"


[profile.dev.package.askama_derive]
opt-level = 3


[profile.release]
opt-level = 3  # Max optimizations for performance
lto = true       # Enable Link Time Optimization
debug = false    # No debug symbols
panic = "abort"  # Abort on panic to reduce size
codegen-units = 1  # Improve cross-crate optimizations
strip = "debuginfo"  # Strip debug symbols
incremental = false  # Disable incremental compilation
overflow-checks = true
